Implementação de melhorias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
 
+    <string name="add_new_note">Add a new note</string>
+    <string name="your_note">Your Note</string>
+
 </resources>
